smaller bugfixes and overflow x to body because I cant figure out why width 100% causes a scroll bar

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -4,6 +4,7 @@
 
 body {
     font-family: 'Source Sans Pro Light';
+    overflow-x: hidden;
     /* width: 10em; */
     /* height: 100%; */
 }
@@ -77,7 +78,7 @@ div#hue-color-popup{
     z-index: 20;
     background: white;
     display: none;
-    
+    /* background: green; */
 }
 
 
@@ -216,12 +217,12 @@ div#main-popup {
     z-index: 10;
     margin: 0 auto;
     border-radius: 2px;
-
 }
 
 div#main-app-content{
     width: 100%;
     height:100%;
+    /* background: gray; */
 }
 
 
